add random board generation on game start

--- a/public/index.html
+++ b/public/index.html
@@ -5,11 +5,11 @@
     <!-- <link rel="icon" href="%PUBLIC_URL%/favicon.ico" /> -->
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta name="theme-color" content="#000000" />
-    <meta
-      name="description"
-      content="Battleship"
-    />
+    <meta name="description" content="Battleship" />
     <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
+    <style>
+      @import url("https://fonts.googleapis.com/css2?family=Roboto+Slab:wght@600&display=swap");
+    </style>
     <title>Battleship</title>
   </head>
   <body>
