add custom style and mobile layout

--- a/public/index.html
+++ b/public/index.html
@@ -16,5 +16,7 @@
     <noscript>You need to enable JavaScript to run this app.</noscript>
     <div id="root"></div>
     <!-- Hit & Miss icons by freepik. https://www.flaticon.com/authors/freepik  -->
+    <!-- Board color palette by petrollum: https://www.colourlovers.com/palette/4308702/soaked_in_seaweed -->
+    <!-- Ships color palette by Miss_Anthropy: https://www.colourlovers.com/palette/694737/Thought_Provoking -->
   </body>
 </html>
